--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "root",
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": ["./packages"],
+  "scripts": {
+    "start": "node index.jsx"
+  },
   "devDependencies": {
-    "lerna": "^6.0.1"
+    "lerna": "6.0.1"
+  },
+  "dependencies": {
+    "ai-chat-cooking-assistant": "*"
   }
 }
